Fix wrap issues and update README

--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body {
 
   .header {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
     background-color: rgb(200, 209, 250);
-    padding: 10px;
-    padding-bottom: 50px;
+    padding: 10px 50px 50px;
   }
   
   .left, .right {
@@ -20,20 +20,12 @@ body {
     justify-content: space-between;
   }
 
-  .left {
-    margin-left: 10%;
-  }
-
   .links {
     display: flex;
     justify-content: space-evenly;
     margin-top: 15px;
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-
-  .right {
-    margin-right: 10%;
   }
 
   .sop {
@@ -96,6 +88,7 @@ body {
   .gallery {
     border: 2px solid black;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
     font-style: italic;
